--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/outputText"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="0.58" />
+            android:layout_weight="0.58"
+            android:text="something" />
 
         <Button
             android:layout_width="wrap_content"
