04-15-2015 7:36pm Working SNMP calls

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         <TextView
             android:layout_width="333dp"
             android:layout_height="wrap_content"
-            android:id="@+id/outputText"
+            android:id="@+id/printDetails"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.58"
             android:text="something" />
