04-15-2015 10:18 -not working settings page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,5 +53,13 @@
             android:text="SUBMIT"
             android:id="@+id/submitButton"
             android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="177dp"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textUserSettings"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.39" />
     </LinearLayout>
 </RelativeLayout>
