--- a/app/src/main/res/values-w820dp/arrays.xml
+++ b/app/src/main/res/values-w820dp/arrays.xml
@@ -12,5 +12,19 @@
         <item name="30">30</item>
         <item name="0">0</item>
     </string-array>
-	
+
+    <string-array name="entries_list_preference">
+        <item name="1">1</item>
+        <item name="7">7</item>
+        <item name="30">30</item>
+        <item name="0">0</item>
+    </string-array>
+
+    <string-array name="entryvalues_list_preference">
+        <item name="1">1</item>
+        <item name="7">7</item>
+        <item name="30">30</item>
+        <item name="0">0</item>
+    </string-array>
+
 </resources>
