--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,11 +55,10 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="177dp"
-            android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/textUserSettings"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.39" />
+            android:layout_width="match_parent"
+            android:layout_height="207dp"
+            tools:context=".MainActivity" />
+
     </LinearLayout>
 </RelativeLayout>
