--- a/app/src/main/res/layout/activity_oldsplash.xml
+++ b/app/src/main/res/layout/activity_oldsplash.xml
@@ -1,13 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_background" >
 
     <ImageView
+        android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -17,6 +18,5 @@
         android:textColor="#454545"
         android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:text="Phillip Ferentinos | Luke Williamson \n Auburn University COMP3710 Spring 2015" />
-
+        android:text="some text"/>
 </RelativeLayout>
