--- a/app/src/main/res/menu/addprinter.xml
+++ b/app/src/main/res/menu/addprinter.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:SNMPrint="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_printer"
-        ic_menu_preferences=""
-        android:orderInCategory="100"
-        android:showAsAction="never"
+        android:id="@+id/action_add_printer"
+        android:orderInCategory="2"
         android:title="@string/add_printer"
-        android:icon="@android:drawable/ic_menu_preferences"/>
+        android:icon="@drawable/ic_action_add"
+        SNMPrint:showAsAction="ifRoom"  />
+
+
+    <item android:id="@+id/action_refresh"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_action_refresh"
+        android:title="Refresh"
+        SNMPrint:showAsAction="ifRoom"  />
 </menu>
