--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:logo">@drawable/ic_launcher</item>
+        <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
+    <!-- Customize your theme here. -->
+    </style>
+    <style name="AppTheme.ActionBar" parent="AppTheme">
+        <item name="android:logo">@drawable/ic_launcher</item>
+        <item name="android:icon">@drawable/ic_launcher</item>
+        <item name="android:displayOptions">useLogo|showHome</item>
+        <item name="displayOptions">useLogo|showHome</item>
     </style>
 
 </resources>
