04/30/2015 11:30pm Working database

--- a/app/src/main/res/layout/addprinter.xml
+++ b/app/src/main/res/layout/addprinter.xml
@@ -55,4 +55,10 @@
         android:id="@+id/addPrinter"
         android:layout_gravity="center_horizontal"/>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/printerList"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
