--- a/app/src/main/res/layout/edit_item_alert.xml
+++ b/app/src/main/res/layout/edit_item_alert.xml
@@ -5,21 +5,49 @@
     android:layout_height="fill_parent">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Printer Name"
+        android:id="@+id/printerNameTitle" />
+
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/alertPrinterName" />
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="IP Address"
+        android:id="@+id/ipAddrTitle" />
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="131.204.116."
+            android:id="@+id/titleMainIP"
+            android:layout_gravity="bottom|left"
+            android:gravity="fill" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/alertipAddr"
+            android:layout_gravity="bottom|right"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/idButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Delete This Printer"
         />
 </LinearLayout>
