--- a/app/src/main/res/layout/edit_item_alert.xml
+++ b/app/src/main/res/layout/edit_item_alert.xml
@@ -4,14 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Printer Name"
-        android:id="@+id/printerNameTitle"
-        android:textSize="20dp"
-        android:textColor="#ff000000" />
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Printer Name"
+            android:id="@+id/printerNameTitle"
+            android:textSize="20dp"
+            android:textColor="#ff000000"
+            android:layout_alignParentLeft="true"/>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="ID"
+            android:id="@+id/alertID"
+            android:textSize="20dp"
+            android:textColor="#ff000000"
+            android:layout_toRightOf="@+id/printerNameTitle"
+            android:gravity="right" />
+    </RelativeLayout>
 
     <EditText
         android:layout_width="match_parent"
@@ -35,7 +49,7 @@
             android:layout_height="match_parent"
             android:text="131.204.116."
             android:id="@+id/titleMainIP"
-            android:layout_gravity="bottom|left"
+            android:layout_gravity="left"
             android:gravity="fill"
             android:textSize="20dp"
             android:textColor="#ff000000" />
@@ -44,7 +58,7 @@
             android:layout_height="match_parent"
             android:inputType="number"
             android:id="@+id/alertipAddr"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="right"
             android:textColor="#ff000000" />
     </LinearLayout>
     <LinearLayout android:layout_width="match_parent"
