--- a/app/src/main/res/layout/edit_item_alert.xml
+++ b/app/src/main/res/layout/edit_item_alert.xml
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="131.204.116."
+            android:text="@string/GLOBAL_IP"
             android:id="@+id/titleMainIP"
             android:layout_gravity="left"
             android:gravity="fill"
